<resources>
    <string name="app_name" translatable="false">Think Machine 4E: Advisor</string>
    <string name="tab_character_info">Information</string>
    <string name="tab_character_description">Description</string>
    <string name="tab_character_characteristics">Characteristics</string>
    <string name="tab_character_skills">Skills</string>
    <string name="tab_character_traits">Traits</string>
    <string name="tab_character_equipment">Equipment</string>
    <string name="tab_character_cybernetics">Cybernetics</string>
    <string name="tab_character_occultism">Occultism</string>
    <string name="tab_character_level">Level</string>
    <string name="tab_character_settings">Settings</string>
    <string name="tab_visualization_txt">Text</string>
    <string name="tab_visualization_pdf">PDF</string>
    <string name="tab_visualization_pdf_small">PDF (Small)</string>
    <string name="tab_random_preferences">Preferences</string>
    <string name="tab_random_profiles">Profiles</string>
    <string name="tab_random_npc">NPCs</string>
    <string name="navigation_character">Character</string>
    <string name="navigation_visualization">Visualization</string>
    <string name="navigation_random">Random</string>
    <string name="navigation_wiki">Wiki</string>
    <string name="wiki_title">Wiki</string>
    <string name="wiki_hint">Select any element and use the help icon to view full details.</string>
    <string name="wiki_group_identity">Identity and origin</string>
    <string name="wiki_group_traits">Traits and progression</string>
    <string name="wiki_group_equipment">Combat and equipment</string>
    <string name="wiki_group_cybernetics">Cybertraits</string>
    <string name="wiki_group_occultism">Occultism</string>
    <string name="wiki_handheld_shield">Handheld shield</string>
    <string name="wiki_occultism_paths">Occultism paths</string>
    <string name="wiki_occultism_powers">Occultism powers</string>
    <string name="share">Share</string>
    <string name="share_body">Character \'${CHARACTER_NAME}\' sheet page.</string>
    <string name="message_too_many_blessings">Exceeding the maximum number of blessings allowed.</string>
    <string name="message_too_many_cybernetics">Exceeding the maximum number of cybernetics allowed.</string>
    <string name="message_required_cybernetic_missing">Required cybernetic device is missing.</string>
    <string name="message_invalid_benefice">Invalid benefice.</string>
    <string name="message_invalid_shield_armor_combination">Invalid combination of armor with energy shield.</string>
    <string name="message_invalid_tech_level">Some items has a tech level higher that the character.</string>
    <string name="message_duplicated_item_removed">Duplicated element removed.</string>
    <string name="message_restricted_element">This element is restricted for your character.</string>
    <string name="message_missing_required_skills">Some skills are required before assigning ranks to this skill.</string>
    <string name="settings_load">Load</string>
    <string name="settings_clone">Clone</string>
    <string name="settings_save">Save</string>
    <string name="settings_import">Import</string>
    <string name="settings_export">Export</string>
    <string name="settings_export_qr">Export to QR</string>
    <string name="settings_import_qr">Import QR</string>
    <string name="settings_global">Global Settings</string>
    <string name="settings_title">Settings</string>
    <string name="message_character_saved_successfully">Character saved.</string>
    <string name="message_character_saved_error">Character export failed!</string>
    <string name="message_character_qr_export_error">QR export failed.</string>
    <string name="message_random_character_success">Character finished randomly.</string>
    <string name="message_random_character_already_started">Character has been started already. All changes will be lost.</string>
    <string name="message_random_character_already_finished">Character is already finished.</string>
    <string name="message_random_character_error">Character cannot be randomly finished!</string>
    <string name="message_invalid_level">Invalid level. Enter a number greater than 0.</string>
    <string name="message_unofficial_element_not_allowed">Non-official elements are not allowed on this character. Check the settings for enabling it.</string>
    <string name="message_setting_unofficial_not_changed">Character is using some unofficial elements. Setting cannot be changed.</string>
    <string name="message_setting_restriction_not_changed">Character is using some restricted elements. Setting cannot be changed.</string>
    <string name="message_incomplete_level">Please, finalize or correct previous level first.</string>
    <string name="message_minimum_level_zero">Minimum level is one.</string>
    <string name="loading">Loading ...</string>
    <string name="character_card_details">Details ...</string>
    <string name="character_delete">Delete</string>
    <string name="character_copy">Duplicate</string>
    <string name="character_progression_status">Status:</string>
    <string name="character_status_in_progress">In progress</string>
    <string name="character_status_undefined">Undefined</string>
    <string name="character_status_not_started">Not started</string>
    <string name="character_status_draft">Draft</string>
    <string name="character_status_equipped">Equipped</string>
    <string name="character_status_extended">Extended</string>
    <string name="character_status_finished">Finished</string>
    <string name="character_threat">Threat Level:</string>
    <string name="settings_new">New</string>
    <string name="export_body">File for importing \'${CHARACTER_NAME}\'  character.</string>
    <string name="export_qr_body">QR image for importing \'${CHARACTER_NAME}\' character.</string>
    <string name="invalid_json_file">The selected file is invalid!</string>
    <string name="invalid_qr_file">The selected QR code is invalid!</string>
    <string name="camera_permission_required">Camera permission is required for QR import.</string>
    <string name="error_duplicating_character">Character cannot be duplicated. Unknown error.</string>
    <string name="message_duplication_ok">Character duplicated correctly!</string>
    <string name="character_deleted_correctly">Character deleted!</string>
    <string name="undo">Undo</string>
    <string name="error_deleting_character">Error deleting the character!</string>
    <string name="counter_characteristics">CHAR</string>
    <string name="counter_skills">SKILLS</string>
    <string name="counter_traits">TRAITS</string>
    <string name="counter_extra">EXTRA</string>
    <string name="counter_points">POINTS</string>
    <string name="counter_cybernetics">INCOMPAT.</string>
    <string name="duplicated_element_removed">Duplicated element has been removed.</string>
    <string name="settings_about">About...</string>
    <string name="settings_remove">Remove</string>
    <string name="character_name_empty">EMPTY</string>
    <string name="tab_license">Licenses</string>
    <string name="tab_about">About</string>
    <string name="tab_privacy">Privacy</string>
    <string name="licensing"><![CDATA[<h1>Licensing</h1>  <p>This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the author. You can obtain a copy of this license following this link:</p>  <p><a href="https://github.com/softwaremagico/ThinkMachine-4E-Advisor/blob/master/LICENSE">GNUv3 </a></p>  <h2>3rd Party Licenses</h2>  <p>Think Machine 4E Advisor is base on:</p><ul><li><a href="https://github.com/softwaremagico/ThinkMachine">Think Machine 4E</a>, that also has been released following the GNU General Public License v3.</li><li>Fonts used in this project are: <a href="https://sourceforge.net/projects/dejavu/">DejaVuSans</a>, ArchitectsDaughter (by <a href="http://www.kimberlygeswein.com/">Kimberly Geswein</a> and based on the SIL Open Font License) and Roman Antique (by <a href="http://www.steffmann.de/wordpress/test-2/typoasis/">Dieter Steffmann</a>)</li><li>Searchable Spinner based on the tool <a href="https://github.com/miteshpithadiya/SearchableSpinner">SearchableSpinner</a> under Apache License v2.</li></ul>  <p>And, of course, remember that Fading Suns is a TradeMark owned by Holistic Design.</p>]]></string>
    <string name="about"><![CDATA[<h1>Think Machine 4E: Advisor</h1>  <p>This is an Android based application for the use of <a href="https://github.com/softwaremagico/ThinkMachine-4E">ThinkMachine 4E</a> Java library.  That means that this is a mobile Android application developed to help the user to create character sheets for the Fading Suns 4th Edition.</p>]]></string>
    <string name="privacy"><![CDATA[<h1>Privacy Policy</h1><p>This document is about Think Machine 4E: Advisor&rsquo;s policy to respect your privacy regarding any information we may collect while operating our website. This Privacy Policy applies to github.com/softwaremagico/ThinkMachine-4E-Advisor (hereinafter, &ldquo;us&rdquo;, &ldquo;we&rdquo;, or &ldquo;github.com/softwaremagico/ThinkMachine-Advisor&rdquo; or &ldquo;the application&rdquo;). We have adopted this privacy policy (&ldquo;Privacy Policy&rdquo;) to explain what information may be collected by this application. This Privacy Policy applies only to information we collect through the use of this application and does not apply to our collection of information from other sources like githubs comments sections or any other external source not directly connected with the use of this application.</p><h2>What we collect</h2><p>The Software &ldquo;Think Machine 4E: Advisor&rdquo; is used for creating fictional characters and therefore does not store, collects or share any personal data. &ldquo;Think Machine 4E: Advisor&rdquo; neither uses any kind of  third-party tools for advertisments, marketing like Adwords or any other that can collect any personal data from your device. This software neither requires any kind of registration or payment.</p>]]></string>
    <string name="firebird_abbrev">fbs</string>
    <string name="preference_group_equipment">Equipment</string>
    <string name="preference_group_cybernetics">Cybernetics</string>
    <string name="preference_group_psi">Psi</string>
    <string name="preference_group_the_occult">The Occult</string>
    <string name="preference_group_character_creation">Character Creation</string>
    <string name="preference_group_character_description">Character Description</string>
    <string name="preference_weaponspreferences">Weapons</string>
    <string name="preference_armourpreferences">Armour</string>
    <string name="preference_shieldpreferences">Energy Shields</string>
    <string name="allow_nonofficial">Enable non-official features</string>
    <string name="allow_restricted">Ignore restrictions</string>
    <string name="setting_title_new_characters">New Characters</string>
    <string name="setting_title_module">Modules</string>
    <string name="module_section_official">Official</string>
    <string name="module_section_custom">Custom</string>
    <string name="module_player_guide">Player Guide</string>
    <string name="module_factions_book">Factions Book</string>
    <string name="module_revised_edition">Revised Edition</string>
    <string name="module_lost_worlds_book">Lost Worlds Book</string>
    <string name="module_imperial_dossier_brother_battle">Imperial Dossier - Brother Battle</string>
    <string name="module_imperial_dossier_charioteers_guild">Imperial Dossier - Charioteers Guild</string>
    <string name="module_imperial_dossier_house_hawkwood">Imperial Dossier - House Hawkwood</string>
    <string name="module_imperial_dossier_reeves_guild">Imperial Dossier - Reeves Guild</string>
    <string name="module_vuldrok_space">Vuldrok Space</string>
</resources>